syntax = "proto3";
package kk_etcd_models;
option go_package = "github.com/cruvie/kk_etcd_go/kk_etcd_models";
import "google/protobuf/duration.proto";

enum PBServerType{
    Unknown = 0;
    Http = 1;
    Grpc = 2;
}

message PBServerRegistration {
  PBServerType ServerType = 1;
  string ServerName = 2;
  string ServerAddr = 3;
  PBCheckConfig CheckConfig = 4;
  message PBCheckConfig{
    PBServerType Type = 1; // Http or Grpc
    // check timeout
    // must grater than 1 second
    google.protobuf.Duration Timeout = 2;
    // check interval, kk_etcd will per Interval to send check request
    // must grater than Timeout
    google.protobuf.Duration Interval = 3;
    // Http default http://+Addr+/KKHealthCheck
    // Grpc Addr in ServerRegistration
    string Addr = 4;
  }
}

message PBListServerRegistration{
  repeated PBServerRegistration List = 1;
}